docs: rewrite README for Tracy profiling integration; integrate Tracy C client, thread naming, frame marks; fix testspeed CLI param; update .gitignore to ignore tracy build outputs

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,12 @@ MUJOCO_LOG.TXT
 
 # Clang cache
 .cache/
+
+# Build Files
+out/
+
+# Tracy build outputs
+third_party/tracy/build/
+
+# IntelliJ IDEA project files
+.idea/
